--- a/fingerprinting.ipynb
+++ b/fingerprinting.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir(\"C:/Users/us16120/Projects/Cheminformatics\")"
+    "os.chdir(\".../Projects/Cheminformatics\")"
    ]
   },
   {
